--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <h3>
                   <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Thesis</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">C program code plagiarism detection with a range of 0% - 100% similarity between programs. Created with the Java programming language.</p>
+                <p class="mb-0 text-base font-medium text-secondary" style="text-align: justify;">C program code plagiarism detection with a range of 0% - 100% similarity between programs. Created with the Java programming language.</p>
               </div>
             </div>
           </div>
@@ -225,6 +225,7 @@
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">Using the Java programming language.</p>
                 <!-- <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a> -->
+                <div><p style="color: rgb(255, 255, 255);">.</p></div>
                 <div><p style="color: rgb(255, 255, 255);">.</p></div>
               </div>
             </div>
