--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
                 <h3>
                   <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Thesis</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">C program code plagiarism detection with a range of 0% - 100% similarity between programs. Created with the Java programming language.</p>
+                <p class="mb-0 text-base font-medium text-secondary" style="text-align: justify;">C program code plagiarism detection with a range of 0% - 100% similarity between programs. Created with the Java programming language.</p>
+                <div><p style="color: rgb(255, 255, 255);">.</p></div>
               </div>
             </div>
           </div>
