--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Fresh Graduate | <span class="text-dark dark:text-white">Application Developer Jr</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Bachelor’s Degree of Informatics Technology<br><span class="font-bold text-dark dark:text-white">University of Muhammadiyah Jakarta</span></p>
 
-            <a href="#contact" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Hubungi Saya</a>
+            <a href="#contact" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Contact Me</a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
