--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Sandhi Dwi Widyantoro</span></h1>
+            <h1 class="text-base font-semibold text-primary md:text-xl">Hello Guys 👋, I'm <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Sandhi Dwi Widyantoro</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Fresh Graduate | <span class="text-dark dark:text-white">Application Developer Jr</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Bachelor’s Degree of Informatics Technology<br><span class="font-bold text-dark dark:text-white">University of Muhammadiyah Jakarta</span></p>
             <a href="#contact" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Contact Me</a>
