--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <a href="#MyProjects" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Projects</a>
                 </li>
                 <li class="group">
-                  <a href="#WorkExperience" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Work Experience</a>
+                  <a href="#Experiences" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Experiences</a>
                 </li>
                 <li class="group">
                   <a href="#contact" class="mx-8 flex py-2 text-base text-dark group-hover:text-primary dark:text-white">Contact</a>
@@ -320,12 +320,12 @@
     <!-- Portfolio Section End -->
 
     <!-- Clients Section Start -->
-    <section id="WorkExperience" class="bg-slate-800 pt-36 pb-32 dark:bg-slate-300">
+    <section id="Experiences" class="bg-slate-800 pt-36 pb-32 dark:bg-slate-300">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-0 text-center">
-            <h4 class="mb-2 text-lg font-semibold text-primary">Work Experience</h4>
-            <h2 class="mb-4 text-3xl font-bold text-white dark:text-dark sm:text-4xl lg:text-5xl">Recent Work Experience/Organization</h2>
+            <h4 class="mb-2 text-lg font-semibold text-primary">Experiences</h4>
+            <h2 class="mb-4 text-3xl font-bold text-white dark:text-dark sm:text-4xl lg:text-5xl">Recent Experiences/Organization</h2>
             <!-- <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit facilis velit!</p> -->
           </div>
         </div>
@@ -424,7 +424,7 @@
                 <a href="#MyProjects" class="mb-3 inline-block text-base hover:text-primary">Projects</a>
               </li>
               <li>
-                <a href="#WorkExperience" class="mb-3 inline-block text-base hover:text-primary">Work Experience</a>
+                <a href="#Experiences" class="mb-3 inline-block text-base hover:text-primary">Experiences</a>
               </li>
               <li>
                 <a href="#contact" class="mb-3 inline-block text-base hover:text-primary">Contact</a>
