--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                   <a href="https://sandhidwi.blogspot.com/" target="_blank" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Blogger</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">Using HTML, CSS, Javascript, Bootstrap v4 programming languages.</p>
-                <a href="https://sandhidwi.blogspot.com/" target="_blank" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
+                <a href="https://sandhidwi.blogspot.com/" target="_blank" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Read more</a>
               </div>
             </div>
           </div>
