--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
             // reset formnya
             form.reset();
             console.log('Success!', response);
+            alert("Message successfully sent");
           })
           .catch((error) => console.error('Error!', error.message));
       });
