--- a/index.html
+++ b/index.html
@@ -370,15 +370,15 @@
           <div class="w-full lg:mx-auto lg:w-2/3">
             <div class="mb-8 w-full px-4">
               <label for="name" class="form-label text-base font-bold text-primary">Full name</label>
-              <input type="text" id="name" class="form-control w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" placeholder="Full name" name="nama"/>
+              <input type="text" id="name" class="form-control w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" placeholder="Full name" name="nama" required/>
             </div>
             <div class="mb-8 w-full px-4">
               <label for="email" class="form-label text-base font-bold text-primary">Email</label>
-              <input type="email" id="email" class="form-control w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" placeholder="Email" name="email"/>
+              <input type="email" id="email" class="form-control w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" placeholder="Email" name="email" required/>
             </div>
             <div class="mb-8 w-full px-4">
               <label for="pesan" class="form-label text-base font-bold text-primary">Message</label>
-              <textarea type="pesan" id="pesan" class="form-control h-32 w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" placeholder="Message" name="pesan"></textarea>
+              <textarea type="pesan" id="pesan" class="form-control h-32 w-full rounded-md bg-slate-200 p-3 text-dark focus:border-primary focus:outline-none focus:ring-1 focus:ring-primary" placeholder="Message" name="pesan" required></textarea>
             </div>
             <div class="w-full px-4">
               <button type="submit" class="btn-kirim w-full rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-500 hover:opacity-80 hover:shadow-lg">Submit</button>
