--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="dist/img/icon5.png">
     <title>My portfolio | Sandhi Dwi Widyantoro</title>
     <link href="dist/css/final.css" rel="stylesheet" />
     <script>
@@ -391,11 +392,11 @@
       <div class="container">
         <div class="flex flex-wrap">
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
-            <h2 class="mb-5 text-4xl font-bold text-white">Media Sosial</h2>
+            <h2 class="mb-5 text-xl font-semibold text-white">Media Sosial</h2>
             <!-- <h3 class="mb-2 text-2xl font-bold">Media Social</h3> -->
-            <p class="mb-3 text-base hover:text-primary">Email : sandhidwiwidyantoro@gmail.com</p>
-            <p class="mb-3 text-base hover:text-primary">Instagram : @sandhidwiw</p>
-            <p class="mb-3 text-base hover:text-primary">Twitter : @sandhidwiw</p>
+            <a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><img href="mailto:sandhidwiwidyantoro@gmail.com"src="dist/img/icon/gmail.png" alt="gmail" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Email : </p><a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><p href class="mb-3 text-base hover:text-primary">sandhidwiwidyantoro@gmail.com</p></a>
+            <a href="https://www.instagram.com/sandhidwiw/" target="_blank"><img src="dist/img/icon/instagram.png" alt="Instagram" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Instagram : </p><a href="https://www.instagram.com/sandhidwiw/" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
+            <a href="https://twitter.com/sandhidwiw/" target="_blank"><img src="dist/img/icon/twitter.png" alt="Twitter" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Twitter : </p><a href="https://twitter.com/sandhidwiw" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
             <h3 class="mb-5 text-xl font-semibold text-white">Interested Category</h3>
