--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="dist/img/sandhi.png" alt="Sandhi Dwi Widyantoro" class="relative z-10 mx-auto max-w-full" />
+              <img src="dist/img/sandhi2.png" alt="Sandhi Dwi Widyantoro" class="relative z-10 mx-auto max-w-full" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="320" height="320" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -394,9 +394,9 @@
           <div class="mb-12 w-full px-4 font-medium text-slate-300 md:w-1/3">
             <h2 class="mb-5 text-xl font-semibold text-white">Media Sosial</h2>
             <!-- <h3 class="mb-2 text-2xl font-bold">Media Social</h3> -->
-            <a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><img href="mailto:sandhidwiwidyantoro@gmail.com"src="dist/img/icon/gmail.png" alt="gmail" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Email : </p><a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><p href class="mb-3 text-base hover:text-primary">sandhidwiwidyantoro@gmail.com</p></a>
-            <a href="https://www.instagram.com/sandhidwiw/" target="_blank"><img src="dist/img/icon/instagram.png" alt="Instagram" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Instagram : </p><a href="https://www.instagram.com/sandhidwiw/" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
-            <a href="https://twitter.com/sandhidwiw/" target="_blank"><img src="dist/img/icon/twitter.png" alt="Twitter" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Twitter : </p><a href="https://twitter.com/sandhidwiw" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
+            <a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><img href="mailto:sandhidwiwidyantoro@gmail.com"src="dist/img/icon/gmail2.png" alt="gmail" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Email : </p><a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><p href class="mb-3 text-base hover:text-primary">sandhidwiwidyantoro@gmail.com</p></a>
+            <a href="https://www.instagram.com/sandhidwiw/" target="_blank"><img src="dist/img/icon/instagram2.png" alt="Instagram" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Instagram : </p><a href="https://www.instagram.com/sandhidwiw/" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
+            <a href="https://twitter.com/sandhidwiw/" target="_blank"><img src="dist/img/icon/twitter2.png" alt="Twitter" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Twitter : </p><a href="https://twitter.com/sandhidwiw" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
             <h3 class="mb-5 text-xl font-semibold text-white">Interested Category</h3>
