--- a/index.html
+++ b/index.html
@@ -520,6 +520,30 @@
       form.addEventListener('submit', (e) => {
         e.preventDefault();
         // ketika tombol submit diklik
+        // tampilkan tombol loading, hilangkan tombol kirim
+        let timerInterval
+        Swal.fire({
+          title: 'Loading',
+          html: 'I will close in <b></b> milliseconds.',
+          timer: 1500,
+          timerProgressBar: true,
+          didOpen: () => {
+            Swal.showLoading()
+            const b = Swal.getHtmlContainer().querySelector('b')
+            timerInterval = setInterval(() => {
+              b.textContent = Swal.getTimerLeft()
+            }, 100)
+          },
+          willClose: () => {
+            clearInterval(timerInterval)
+          }
+        }).then((result) => {
+          /* Read more about handling dismissals below */
+          if (result.dismiss === Swal.DismissReason.timer) {
+            console.log('I was closed by the timer')
+          }
+        })
+
         fetch(scriptURL, { method: 'POST', body: new FormData(form) })
           .then((response) => {
             // tampilkan tombol kirim, hilangkan tombol loading
