--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             </a>
           </div>
           <p class="text-center text-xs font-medium text-slate-500">
-            Created with <span class="text-pink-500">❤️</span> by <a href="https://instagram.com/sandhikagalih" target="_blank" class="font-bold text-primary">Sandhi Dwi Widyantoro</a>, using
+            Created with <span class="text-pink-500">❤️</span> by <a href="https://instagram.com/sandhidwiw" target="_blank" class="font-bold text-primary">Sandhi Dwi Widyantoro</a>, using
             <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a>.
           </p>
         </div>
