--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
               <img src="dist/img/clients/Logo_IMM.svg.png" alt="IMM FTUMJ" />
             </a>
             <a class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/Logo_UMJ.png" alt="IMM FTUMJ" />
+              <img src="dist/img/clients/logo-jalin.png" alt="Jalin Pembayaran Nusantara" />
             </a>
           </div>
         </div>
