--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
               <img src="dist/img/portfolio/rajapakan.jpg" alt="Programming" class="w-full" />
               <div class="py-8 px-6">
                 <h3>
-                  <a href="https://rajapakanbekasi.blogspot.com" target="_blank" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Landing Page Petshop Site</a>
+                  <a href="https://rajapakanbekasi.blogspot.com" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Landing Page Petshop Site</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">Using HTML, CSS, Javascript, Bootstrap v4 programming languages.</p>
-                <a href="https://rajapakanbekasi.blogspot.com" target="_blank" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Read more</a>
+                <a href="https://rajapakanbekasi.blogspot.com/" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Read more</a>
               </div>
             </div>
           </div>
