--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               <img src="dist/img/portfolio/DPC.jpg" alt="Mechanical Keyboard" class="w-full"/>
               <div class="py-8 px-6">
                 <h3>
-                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Thesis</a>
+                  <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Final Project</a>
                 </h3>
                 <p class="mb-0 text-base font-medium text-secondary" style="text-align: justify;">C program code plagiarism detection with a range of 0% - 100% similarity between programs. Created with the Java language.</p>
                 <br/>
