--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
               <img src="dist/img/clients/mii-logo.png" alt="MII" />
             </a>
             <a class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/jamkrindo.png" alt="Jamkrindo" />
+              <img src="dist/img/clients/jamkrindo.png" alt="PT Jamkrindo" />
             </a>
             <a class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/soho.png" alt="Soho Global Health" />
+              <img src="dist/img/clients/soho.png" alt="PT Soho Global Health" />
             </a>
             <a class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
               <img src="dist/img/clients/hmif.png" alt="HMIF FTUMJ" />
@@ -346,7 +346,7 @@
               <img src="dist/img/clients/Logo_IMM.svg.png" alt="IMM FTUMJ" />
             </a>
             <a class="mx-4 max-w-[120px] py-4 opacity-60 grayscale transition duration-500 hover:opacity-100 hover:grayscale-0 lg:mx-6 xl:mx-8">
-              <img src="dist/img/clients/logo-jalin.png" alt="Jalin Pembayaran Nusantara" />
+              <img src="dist/img/clients/logo-jalin.png" alt="PT Jalin Pembayaran Nusantara" />
             </a>
           </div>
         </div>
