--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
             <!-- Twitter -->
             <a
-              href="https://twitter.com/sandhidwiw"
+              href="https://x.com/sandhidw"
               target="_blank"
               class="mr-3 flex h-9 w-9 items-center justify-center rounded-full border border-slate-300 text-slate-300 hover:border-primary hover:bg-primary hover:text-white"
             >
