--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             <!-- <h3 class="mb-2 text-2xl font-bold">Media Social</h3> -->
             <a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><img href="mailto:sandhidwiwidyantoro@gmail.com"src="dist/img/icon/gmail2.png" alt="gmail" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Email : </p><a href="mailto:sandhidwiwidyantoro@gmail.com" target="_blank"><p href class="mb-3 text-base hover:text-primary">sandhidwiwidyantoro@gmail.com</p></a>
             <a href="https://www.instagram.com/sandhidwiw/" target="_blank"><img src="dist/img/icon/instagram2.png" alt="Instagram" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Instagram : </p><a href="https://www.instagram.com/sandhidwiw/" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
-            <a href="https://x.com/sandhidw" target="_blank"><img src="dist/img/icon/twitter2.png" alt="Twitter" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Twitter : </p><a href="https://twitter.com/sandhidwiw" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidwiw</p></a>
+            <a href="https://x.com/sandhidw" target="_blank"><img src="dist/img/icon/twitter2.png" alt="Twitter" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Twitter : </p><a href="https://twitter.com/sandhidwiw" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidw</p></a>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
             <h3 class="mb-5 text-xl font-semibold text-white">Interested Category</h3>
