--- a/index.html
+++ b/index.html
@@ -410,6 +410,9 @@
               <li>
                 <a class="mb-3 inline-block text-base hover:text-primary">UI & UX</a>
               </li>
+              <li>
+                <a class="mb-3 inline-block text-base hover:text-primary">IT Quality Assurance</a>
+              </li>
             </ul>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
