--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <a href="https://x.com/sandhidw" target="_blank"><img src="dist/img/icon/twitter2.png" alt="Twitter" style="height: 60px; width: 60px; float:left; margin-top: -5px; margin-left: -10px;"></a><p>Twitter : </p><a href="https://x.com/sandhidw" target="_blank"><p class="mb-3 text-base hover:text-primary">@sandhidw</p></a>
           </div>
           <div class="mb-12 w-full px-4 md:w-1/3">
-            <h3 class="mb-5 text-xl font-semibold text-white">Interested Category</h3>
+            <h3 class="mb-5 text-xl font-semibold text-white">Interested</h3>
             <ul class="text-slate-300">
               <li>
                 <a class="mb-3 inline-block text-base hover:text-primary">Programming</a>
