--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">About Me</h4>
             <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Application Developer Jr</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg" style="text-align: justify;">I am a graduate of S1 Informatics Engineering from Universitas Muhammadiyah Jakarta (August 2018 - August 2022).</p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg" style="text-align: justify;">I am a graduate of S1 Informatics Engineering from Universitas Muhammadiyah Jakarta (August 2018 - August 2022).I have a Certified Network Administrator (CNA) certification from BNSP which is valid until August 2025. I have hands-on experience in application development through working opportunities in reputable companies.</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Let's Be Friends</h3>
             <p class="mb-6 text-base font-medium text-secondary lg:text-lg"  style="text-align: justify;">
-              I have a Certified Network Administrator (CNA) certification from BNSP which is valid until August 2025. I have hands-on experience in application development through working opportunities in reputable companies. Currently, I am actively looking for job opportunities that offer room for growth and the chance to further develop my skills in Software Development, Quality Assurance (Manual & Automation), and IT Infrastructure & Networking.
+              Currently, I am actively looking for job opportunities that offer room for growth and the chance to further develop my skills in Software Development, Quality Assurance (Manual & Automation), and IT Infrastructure & Networking.
             </p>
             <div class="flex items-center">
               <!-- Instagram -->
