--- a/index.html
+++ b/index.html
@@ -269,6 +269,47 @@
           </div>
         </div>
 
+         <!-- Tabel ketiga --> 
+        <div class="flex flex-wrap">
+          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800">
+              <img src="dist/img/portfolio/rajapakan.jpg" alt="Programming" class="w-full" />
+              <div class="py-8 px-6">
+                <h3>
+                  <a href="https://rajapakanbekasi.blogspot.com" target="_blank" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Landing Page Petshop Site</a>
+                </h3>
+                <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">Using HTML, CSS, Javascript, Bootstrap v4 programming languages.</p>
+                <a href="https://rajapakanbekasi.blogspot.com/" target="_blank" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Read more</a>
+              </div>
+            </div>
+          </div>
+          <!--
+          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800">
+              <img src="dist/img/portfolio/portfolio.jpg" alt="Mechanical Keyboard" class="w-full"/>
+              <div class="py-8 px-6">
+                <h3>
+                  <a href="https://portfoliosandhidwiw.vercel.app" target="_blank" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Portfolio</a>
+                </h3>
+                <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">Using HTML, CSS, Javascript, Bootstrap v5 programming languages.</p>
+                <a href="https://portfoliosandhidwiw.vercel.app" target="_blank" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Read more</a>
+              </div>
+            </div>
+          </div>
+          <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
+            <div class="mb-10 overflow-hidden rounded-xl bg-white shadow-lg dark:bg-slate-800">
+              <img src="dist/img/portfolio/web.jpg" alt="Coffee" class="w-full" />
+              <div class="py-8 px-6">
+                <h3>
+                  <a href="https://sandhidwi.blogspot.com" target="_blank" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Blogger</a>
+                </h3>
+                <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">Using HTML, CSS, Javascript, Bootstrap v4 programming languages.</p>
+                <a href="https://sandhidwi.blogspot.com" target="_blank" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Read more</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      -->
       </div>
     </section>
     <!-- <section id="portfolio" class="bg-slate-100 pt-36 pb-16 dark:bg-slate-800">
