--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               <img src="dist/img/portfolio/ecp.jpeg" alt="Mechanical Keyboard" class="w-full"/>
               <div class="py-8 px-6">
                 <h3>
-                  <a href="https://www.jalin.co.id/id-id/produk-dan-layanan/digital/jalin-echannel-platform" target="_blank" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Portfolio</a>
+                  <a href="https://www.jalin.co.id/id-id/produk-dan-layanan/digital/jalin-echannel-platform" target="_blank" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">eChannel Platform</a>
                 </h3>
                 <p class="mb-6 text-base font-medium text-secondary" style="text-align: justify;">Participate in the eChannel Platform at PT Jalin Pembayaran Nusantara as a Quality Assurance</p>
                 <a href="https://www.jalin.co.id/id-id/produk-dan-layanan/digital/jalin-echannel-platform" target="_blank" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Read more</a>
