--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
             <h1 class="text-base font-semibold text-primary md:text-xl">Hello Guys 👋, I'm <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Sandhi Dwi Widyantoro</span></h1>
-            <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Fresh Graduate | <span class="text-dark dark:text-white">Application Developer Jr</span></h2>
+            <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Quality Assurance, IT Support, Developer | <span class="text-dark dark:text-white">Application Developer Jr</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Bachelor’s Degree of Informatics Technology<br><span class="font-bold text-dark dark:text-white">University of Muhammadiyah Jakarta</span></p>
             <a href="#contact" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Contact Me</a>
           </div>
@@ -107,7 +107,7 @@
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">About Me</h4>
             <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">Application Developer Jr</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg" style="text-align: justify;">I am a graduate of S1 Informatics Engineering from Universitas Muhammadiyah Jakarta (August 2018 - August 2022).I have a Certified Network Administrator (CNA) certification from BNSP which is valid until August 2025. I have hands-on experience in application development through working opportunities in reputable companies.</p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg" style="text-align: justify;">I am a graduate of S1 Informatics Engineering from Universitas Muhammadiyah Jakarta (August 2018 - August 2022). I have a Certified Network Administrator (CNA) certification from BNSP and Certificate Sofware Developer from Creatio. I have hands-on experience in application development through working opportunities in reputable companies.</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Let's Be Friends</h3>
